--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -1,11 +1,11 @@
 {
   "background_color": "#FFF",
   "display": "standalone",
-  "name": "HelloCordova",
-  "short_name": "HelloCordova",
-  "version": "io.cordova.hellocordova",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
-  "author": "Apache Cordova Team",
+  "name": "WarSim",
+  "short_name": "WarSim",
+  "version": "com.milord.warsim",
+  "description": "A War Simulation Mobile Game using Cordova",
+  "author": "Michael Milord",
   "icons": [],
   "start_url": "index.html"
 }
