--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/tsc --build tsconfig.json --watch ",
-    "build": "./node_modules/.bin/tsc --build tsconfig.json"
+    "build": "./node_modules/.bin/tsc --build tsconfig.json && npm run copy",
+    "copy": "copyfiles -u 1 \"./src/**/*.{css,html}\" \"./www/\""
   },
   "keywords": [
     "ecosystem:cordova"
@@ -18,6 +19,7 @@
     "cordova-plugin-whitelist": "1"
   },
   "devDependencies": {
+    "copyfiles": "^2.1.1",
     "cordova-plugin-whitelist": "^1.3.4",
     "parcel-bundler": "^1.12.3",
     "typescript": "^3.5.3"
